<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.bithon</groupId>
        <artifactId>bithon</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <groupId>org.bithon.agent</groupId>
    <artifactId>agent</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <java.version>8</java.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <modules>
        <module>agent-sdk</module>
        <module>agent-bootstrap</module>
        <module>agent-core</module>
        <module>agent-controller</module>
        <module>agent-dispatcher-brpc</module>
        <module>agent-plugins</module>
        <module>agent-sentinel</module>
        <module>agent-main</module>

        <!-- Must be the last module -->
        <!-- make distribution package -->
        <module>agent-distribution</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Core -->
            <dependency>
                <groupId>org.bithon.agent</groupId>
                <artifactId>agent-main</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Core -->
            <dependency>
                <groupId>org.bithon.agent</groupId>
                <artifactId>agent-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Dispatcher brpc client -->
            <dependency>
                <groupId>org.bithon.agent</groupId>
                <artifactId>agent-dispatcher-brpc</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.bithon.agent</groupId>
                <artifactId>agent-bootstrap</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.bithon.agent</groupId>
                <artifactId>agent-controller</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.bithon.agent</groupId>
                <artifactId>agent-sentinel</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.bithon.agent</groupId>
                <artifactId>agent-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>de.thetaphi</groupId>
                <artifactId>forbiddenapis</artifactId>
                <version>3.1</version>
                <configuration>
                    <ignoreSignaturesOfMissingClasses>true</ignoreSignaturesOfMissingClasses>
                    <bundledSignatures>
                        <!--
                          This will automatically choose the right
                          signatures based on 'maven.compiler.target':
                          -->
                        <bundledSignature>jdk-unsafe</bundledSignature>
                    </bundledSignatures>
                    <signaturesFiles>
                        <signaturesFile>${project.parent.basedir}/../dev/forbidden-apis-joda-time.txt</signaturesFile>
                        <signaturesFile>${project.parent.basedir}/../dev/forbidden-apis-bithon.txt</signaturesFile>
                    </signaturesFiles>
                    <excludes>
                        <exclude>**/SomeAvroDatum.class</exclude>
                    </excludes>
                    <suppressAnnotations>
                        <annotation>**.SuppressForbidden</annotation>
                    </suppressAnnotations>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <bundledSignatures>
                                <!-- Check jdk-system-out only for production code, but not in test code -->
                                <bundledSignature>jdk-unsafe</bundledSignature>
                            </bundledSignatures>
                        </configuration>
                    </execution>
                    <execution>
                        <id>testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCheck</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>